# strata-eval

./: .gitignore  BEIR_RESULTS.md  EPICS.md  PERFORMANCE_RESULTS.md  README.md  RESEARCH_ROADMAP.md  pyproject.toml  requirements.txt  run.py
beir/: __main__.py  config.py  retriever.py  run.py
benchmarks/: __init__.py  base.py
benchmarks/ann/: runner.py
benchmarks/beir/: config.py  retriever.py  runner.py
benchmarks/graphalytics/: ldbc.py  runner.py
benchmarks/graphrag_bench/: config.py  runner.py
benchmarks/locomo/: runner.py
benchmarks/longmemeval/: runner.py
benchmarks/ragas_bench/: config.py  runner.py
benchmarks/ycsb/: config.py  runner.py  workloads.py
datasets/: .gitignore  README.md
lib/: download.py  recorder.py  report.py  strata_client.py  system_info.py
scripts/: run_all.py  verify_bm25.py
strata_eval/: __init__.py  __main__.py  cli.py  download.py  retriever.py  run.py  schema.py  system_info.py
strata_eval/benchmarks/: __init__.py  base.py
strata_eval/benchmarks/ann/: config.py  datasets.py  runner.py
strata_eval/benchmarks/beir/: retriever.py  runner.py
strata_eval/benchmarks/graphalytics/: algorithms.py  config.py  runner.py
strata_eval/benchmarks/graphrag_bench/: runner.py
strata_eval/benchmarks/locomo/: config.py  runner.py
strata_eval/benchmarks/longmemeval/: config.py  runner.py
strata_eval/benchmarks/ragas_bench/: runner.py
strata_eval/benchmarks/ycsb/: runner.py
tests/: test_strata_client.py
