[project]
name = "strata-eval"
version = "0.1.0"
description = "IR quality benchmarks for Strata hybrid search using BEIR"
requires-python = ">=3.10"
dependencies = [
    "stratadb>=0.12",
    "beir",
    "sentence-transformers",
    "pytrec_eval",
]

[tool.setuptools.packages.find]
include = ["strata_eval*"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
