[project]
name = "strata-eval"
version = "0.2.0"
description = "Comprehensive benchmarks for StrataDB — BEIR, YCSB, ANN, LDBC Graphalytics, and more"
requires-python = ">=3.10"
dependencies = [
    "stratadb>=0.12",
    "numpy>=1.24",
    "tqdm>=4.60",
]

[tool.setuptools.packages.find]
include = ["strata_eval*"]

[project.optional-dependencies]
beir = ["beir", "sentence-transformers", "pytrec_eval"]
ann = ["h5py>=3.0"]
llm = ["ragas", "rouge-score", "openai"]
dev = ["pytest", "ruff"]
all = ["strata-eval[beir,ann,llm,dev]"]
